# tun2socks

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/didi/android/tun2socks/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/didi/android/tun2socks/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
native-test/: build.gradle
native-test/src/androidTest/java/com/didi/android/native_test/: ExampleInstrumentedTest.java
native-test/src/main/: AndroidManifest.xml
native-test/src/main/cpp/: Android.mk  CMakeLists.txt  native_test.cpp
native-test/src/main/java/com/didi/android/native_test/: NativeLib.java
native-test/src/test/java/com/didi/android/native_test/: ExampleUnitTest.java
tun2socks/: build.gradle
tun2socks/src/androidTest/java/com/didi/android/tun2socks/: ExampleInstrumentedTest.java
tun2socks/src/main/: AndroidManifest.xml
tun2socks/src/main/java/com/didi/android/tun2socks/: ExecutableX.java  NativeLib.java  ProcessRuntime.java  Tun2Socks.java
tun2socks/src/main/jni/: CMakeLists.txt
tun2socks/src/main/jni/test/: tun2socks.cpp
tun2socks/src/main/jni/tun2socks/: tun2socks.c  tun2socks.h
tun2socks/src/test/java/com/didi/android/tun2socks/: ExampleUnitTest.java
